# rust_test

./: Cargo.toml  README.md
01.formatting/src/: main.rs
02.primitives/: Cargo.toml
casting/: Cargo.toml
casting/src/: main.rs
constants/src/: main.rs
control_flow/: Cargo.toml
control_flow/matching/binding/: Cargo.toml
control_flow/matching/destructuring/: Cargo.toml
control_flow/matching/src/: main.rs
control_flow/while_let/: Cargo.toml
control_flow05/: Cargo.toml
control_flow05/src/: main.rs
custom_types/: Cargo.toml
custom_types/src/: main.rs
data_type03/: Cargo.toml
data_type03/src/: main.rs
enums/src/: main.rs
expressions/: Cargo.toml
expressions/src/: main.rs
flow_control/: Cargo.toml
flow_control/if_let/: Cargo.toml
flow_control/matching/: Cargo.toml
flow_control/src/: main.rs
fmt_test/: Cargo.toml
fmt_test/src/: main.rs
formatting/: Cargo.toml
formatting/src/: main.rs
function04/: Cargo.toml
function04/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
guessing_game01/: Cargo.toml
guessing_game01/src/: main.rs
ownership06/: Cargo.toml
ownership06/src/: main.rs
primitives/: Cargo.toml
primitives/src/: main.rs
print_test/: Cargo.toml
print_test/src/: main.rs
reference_and_borrow07/: Cargo.toml
reference_and_borrow07/src/: main.rs
scope_shadowing/src/: main.rs
slice08/: Cargo.toml
slice08/src/: main.rs
src/: main.rs
variable_and_mutability02/: Cargo.toml
variable_and_mutability02/src/: main.rs
variable_bindings/src/: main.rs
variables/src/: main.rs  test.rs
(+4 files in other folders)
