workspace = { members = ["guessing_game01", "variable_and_mutability02", "data_type03", "function04", "control_flow05"] }
[package]
name = "rust_test"
version = "0.1.0"
authors = ["terzeron <terzeron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


